@@ -58,10 +58,11 @@ gsl_ran_fdist_pdf (const double x, const double nu1, const double nu2)
       double lg12 = gsl_sf_lngamma ((nu1 + nu2) / 2);
       double lg1 = gsl_sf_lngamma (nu1 / 2);
       double lg2 = gsl_sf_lngamma (nu2 / 2);
-      
-      p = exp (lglg + lg12 - lg1 - lg2)
-        * pow (x, nu1 / 2 - 1) * pow (nu2 + nu1 * x, -nu1 / 2 - nu2 / 2);
-      
+
+      p =
+	exp (lglg + lg12 - lg1 - lg2 + (nu1 / 2 - 1) * log (x) -
+	     ((nu1 + nu2) / 2) * log (nu2 + nu1 * x));
+
       return p;
     }
 }
