@@ -1,3 +1,8 @@
+2010-02-24  Brian Gough  <bjg@network-theory.co.uk>
+
+	* fdist.c (gsl_ran_fdist_pdf): compute log of pdf to avoid
+	overflow/underflow.
+
 2009-07-10  Brian Gough  <bjg@network-theory.co.uk>
 
 	* exponential.c (gsl_ran_exponential): use log(1-u) to include 0
